added planet and mass columns
added planet and mass columns to the table

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="utf-8">
 <style>
 table {
   font-family: arial, sans-serif;
@@ -25,14 +26,18 @@ tr:nth-child(even) {
 
 <table>
   <tr>
-    <th>Company</th>
-    <th>Contact</th>
-    <th>Country</th>
+    <th>Planet</th>
+    <td>Mercury</td>
+    <td>Venus</td>
+    <td>Earth</td>
+    <td>Mars</td>
   </tr>
   <tr>
-    <td>Alfreds Futterkiste</td>
-    <td>Maria Anders</td>
-    <td>Germany</td>
+    <th>Mass (kg)</th>
+    <td>3.3 x 1023</td>
+    <td>4.87 x 1024</td>
+    <td>5.98 x 1024</td>
+    <td>6.42 x 1023</td>
   </tr>
   <tr>
     <td>Centro comercial Moctezuma</td>
