added diameter and mean density
added diameter and mean density columns with data

--- a/index.html
+++ b/index.html
@@ -40,14 +40,18 @@ tr:nth-child(even) {
     <td>6.42 x 1023</td>
   </tr>
   <tr>
-    <td>Centro comercial Moctezuma</td>
-    <td>Francisco Chang</td>
-    <td>Mexico</td>
+   <th>Diameter (km)</th>
+   <td>4879.4</td>
+   <td>12104</td>
+   <td>12756</td>
+   <td>6787</td>
   </tr>
   <tr>
-    <td>Ernst Handel</td>
-    <td>Roland Mendel</td>
-    <td>Austria</td>
+   <th>Mean density (kg/m3)</th>
+   <td>5420</td>
+   <td>5250</td>
+   <td>5520</td>
+   <td>3940</td>
   </tr>
   <tr>
     <td>Island Trading</td>
