added avg distance and rotation period columns
added avg distance from the sun and rotation period columns with data

--- a/index.html
+++ b/index.html
@@ -40,33 +40,39 @@ tr:nth-child(even) {
     <td>6.42 x 1023</td>
   </tr>
   <tr>
-   <th>Diameter (km)</th>
-   <td>4879.4</td>
-   <td>12104</td>
-   <td>12756</td>
-   <td>6787</td>
+    <th>Diameter (km)</th>
+    <td>4879.4</td>
+    <td>12104</td>
+    <td>12756</td>
+    <td>6787</td>
   </tr>
   <tr>
-   <th>Mean density (kg/m3)</th>
-   <td>5420</td>
-   <td>5250</td>
-   <td>5520</td>
-   <td>3940</td>
+    <th>Mean density (kg/m3)</th>
+    <td>5420</td>
+    <td>5250</td>
+    <td>5520</td>
+    <td>3940</td>
   </tr>
   <tr>
-    <td>Island Trading</td>
-    <td>Helen Bennett</td>
-    <td>UK</td>
+    <th>Escape velocity (m/s)</th>
+    <td>4300</td>
+    <td>10400</td>
+    <td>11200</td>
+    <td>5000</td>
   </tr>
   <tr>
-    <td>Laughing Bacchus Winecellars</td>
-    <td>Yoshi Tannamuri</td>
-    <td>Canada</td>
+    <th>Average distance from Sun</th>
+    <td>0.387 AU (57,909,175 km)</td>
+    <td>0.723 AU (108,208,930 km</td>
+    <td>1 AU (149,597,890 km)</td>
+    <td>1.524 AU (227,936,640 km)</td>  
   </tr>
   <tr>
-    <td>Magazzini Alimentari Riuniti</td>
-    <td>Giovanni Rovelli</td>
-    <td>Italy</td>
+    <th>Rotation period (length of day in Earth days)</th>
+    <td>58.65</td>
+    <td>243.02 (retrograde)</td>
+    <td>1 (23.93 hours)</td>
+    <td>1.026</td>
   </tr>
 </table>
 
