added revolution period and obliquity
added revolution period and obliquity columns and data

--- a/index.html
+++ b/index.html
@@ -74,6 +74,20 @@ tr:nth-child(even) {
     <td>1 (23.93 hours)</td>
     <td>1.026</td>
   </tr>
+  <tr>
+    <th>Revolution period (length of year in Earth days)</th>
+    <td>87.97</td>
+    <td>224.7</td>
+    <td>365.26</td>
+    <td>686.98</td>
+  </tr>
+  <tr>
+    <th>Obliquity (tilt of axis degrees)</th>
+    <td>0</td>
+    <td>178</td>
+    <td>23.4</td>
+    <td>25</td>
+  </tr>
 </table>
 
 </body>
