added orbit inclination and eccentricity
added orbit inclination and eccentricity columns and data

--- a/index.html
+++ b/index.html
@@ -88,6 +88,20 @@ tr:nth-child(even) {
     <td>23.4</td>
     <td>25</td>
   </tr>
+  <tr>
+    <th>Orbit inclination (degrees)</th>
+    <td>7</td>
+    <td>3.39</td>
+    <td>0</td>
+    <td>1.85</td>
+  </tr>
+  <tr>
+    <th>Orbit eccentricity (deviation from circular)</th>
+    <td>0.206</td>
+    <td>0.007</td>
+    <td>0.017</td>
+    <td>0.093</td>
+  </tr>
 </table>
 
 </body>
