added mean, minimum and maximum temperature
added mean, minimum and maximum temperature columns and data

--- a/index.html
+++ b/index.html
@@ -102,6 +102,28 @@ tr:nth-child(even) {
     <td>0.017</td>
     <td>0.093</td>
   </tr>
+  <tr>
+    <th>Mean surface temperature (K)</th>
+    <td>452</td>
+    <td>726</td>
+    <td>281</td>
+    <td> </td>
+  </tr>
+  <tr>
+    <th>Maximum surface temperature (K)</th>
+    <td>700</td>
+    <td> </td>
+    <td>310</td>
+    <td>310</td>
+  </tr>
+  <tr>
+    <th>Minimum surface temperature (K)</th>
+    <td>100</td>
+    <td> </td>
+    <td>260</td>
+    <td>150</td>
+  </tr>
+  
 </table>
 
 </body>
