--- a/index.html
+++ b/index.html
@@ -63,6 +63,131 @@ tr:nth-child(even) {
   <tr>
     <th>Average distance from Sun</th>
     <td>0.387 AU (57,909,175 km)</td>
+    <td>0.723 AU (108,208,930 km)</td>
+    <td>1 AU (149,597,890 km)</td>
+    <td>1.524 AU (227,936,640 km)</td>  
+  </tr>
+  <tr>
+    <th>Rotation period (length of day in Earth days)</th>
+    <td>58.65</td>
+    <td>243.02 (retrograde)</td>
+    <td>1 (23.93 hours)</td>
+    <td>1.026</td>
+  </tr>
+  <tr>
+    <th>Revolution period (length of year in Earth days)</th>
+    <td>87.97</td>
+    <td>224.7</td>
+    <td>365.26</td>
+    <td>686.98</td>
+  </tr>
+  <tr>
+    <th>Obliquity (tilt of axis degrees)</th>
+    <td>0</td>
+    <td>178</td>
+    <td>23.4</td>
+    <td>25</td>
+  </tr>
+  <tr>
+    <th>Orbit inclination (degrees)</th>
+    <td>7</td>
+    <td>3.39</td>
+    <td>0</td>
+    <td>1.85</td>
+  </tr>
+  <tr>
+    <th>Orbit eccentricity (deviation from circular)</th>
+    <td>0.206</td>
+    <td>0.007</td>
+    <td>0.017</td>
+    <td>0.093</td>
+  </tr>
+  <tr>
+    <th>Mean surface temperature (K)</th>
+    <td>452</td>
+    <td>726</td>
+    <td>281</td>
+    <td> </td>
+  </tr>
+  <tr>
+    <th>Maximum surface temperature (K)</th>
+    <td>700</td>
+    <td> </td>
+    <td>310</td>
+    <td>310</td>
+  </tr>
+  <tr>
+    <th>Minimum surface temperature (K)</th>
+    <td>100</td>
+    <td> </td>
+    <td>260</td>
+    <td>150</td>
+  </tr>
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+<style>
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid #dddddd;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+  background-color: #dddddd;
+}
+</style>
+</head>
+<body>
+
+<h2>HTML Table</h2>
+
+<table>
+  <tr>
+    <th>Planet</th>
+    <td>Mercury</td>
+    <td>Venus</td>
+    <td>Earth</td>
+    <td>Mars</td>
+  </tr>
+  <tr>
+    <th>Mass (kg)</th>
+    <td>3.3 x 1023</td>
+    <td>4.87 x 1024</td>
+    <td>5.98 x 1024</td>
+    <td>6.42 x 1023</td>
+  </tr>
+  <tr>
+    <th>Diameter (km)</th>
+    <td>4879.4</td>
+    <td>12104</td>
+    <td>12756</td>
+    <td>6787</td>
+  </tr>
+  <tr>
+    <th>Mean density (kg/m3)</th>
+    <td>5420</td>
+    <td>5250</td>
+    <td>5520</td>
+    <td>3940</td>
+  </tr>
+  <tr>
+    <th>Escape velocity (m/s)</th>
+    <td>4300</td>
+    <td>10400</td>
+    <td>11200</td>
+    <td>5000</td>
+  </tr>
+  <tr>
+    <th>Average distance from Sun</th>
+    <td>0.387 AU (57,909,175 km)</td>
     <td>0.723 AU (108,208,930 km</td>
     <td>1 AU (149,597,890 km)</td>
     <td>1.524 AU (227,936,640 km)</td>  
@@ -123,8 +248,22 @@ tr:nth-child(even) {
     <td>260</td>
     <td>150</td>
   </tr>
-  
+  <tr>
+    <th>Visual geometric albedo (reflectivity)</th>
+    <td>0.12</td>
+    <td>0.59</td>
+    <td>0.39</td>
+    <td>0.15</td>
+  </tr>
+  <tr>
+    <th>Largest known surface feature</th>
+    <td>Caloris Basin (1350 km diameter)</td>
+    <td> </td>
+    <td> </td>
+    <td> </td>
+  </tr>
 </table>
+
 
 </body>
 </html>
