added surface materials column
added surface materials columns and data

--- a/index.html
+++ b/index.html
@@ -151,7 +151,13 @@ tr:nth-child(even) {
     <td>78% nitrogen, 21% oxygen, 1% argon</td>
     <td>95% carbondioxide, 3% nitrogen, 1.6% argon</td>
   </tr>
-  
+  <tr>
+    <th>Surface materials</th>
+    <td>basaltic and anorthositic rocks and regolith</td>
+    <td>basaltic rock and altered materials</td>
+    <td>basaltic and granitic rock and altered materials</td>
+    <td>basaltic rock and altered materials</td>
+  </tr>
 </table>
 
 
