td class="td" was changed
td class="td" was changed to just td

--- a/index.html
+++ b/index.html
@@ -34,38 +34,38 @@
       </tr>
       <tr>
         <th class="property">Mean density (kg/m3)</th>
-        <td class="td">5420</td>
-        <td class="td">5250</td>
-        <td class="td">5520</td>
-        <td class="td">3940</td>
+        <td>5420</td>
+        <td>5250</td>
+        <td>5520</td>
+        <td>3940</td>
       </tr>
       <tr>
         <th class="property">Escape velocity (m/s)</th>
-        <td class="td">4300</td>
-        <td class="td">10400</td>
-        <td class="td">11200</td>
-        <td class="td">5000</td>
+        <td>4300</td>
+        <td>10400</td>
+        <td>11200</td>
+        <td>5000</td>
       </tr>
       <tr>
         <th class="property">Average distance from Sun</th>
-        <td class="td">0.387 AU (57,909,175 km)</td>
-        <td class="td">0.723 AU (108,208,930 km</td>
-        <td class="td">1 AU (149,597,890 km)</td>
-        <td class="td">1.524 AU (227,936,640 km)</td>  
+        <td>0.387 AU (57,909,175 km)</td>
+        <td>0.723 AU (108,208,930 km</td>
+        <td>1 AU (149,597,890 km)</td>
+        <td>1.524 AU (227,936,640 km)</td>  
       </tr>
       <tr>
         <th class="property">Rotation period (length of day in Earth days)</th>
-        <td class="td">58.65</td>
-        <td class="td">243.02 (retrograde)</td>
-        <td class="td">1 (23.93 hours)</td>
-        <td class="td">1.026</td>
+        <td>58.65</td>
+        <td>243.02 (retrograde)</td>
+        <td>1 (23.93 hours)</td>
+        <td>1.026</td>
       </tr>
       <tr>
         <th class="property">Revolution period (length of year in Earth days)</th>
-        <td class="td">87.97</td>
-        <td class="td">224.7</td>
-        <td class="td">365.26</td>
-        <td class="td">686.98</td>
+        <td>87.97</td>
+        <td>224.7</td>
+        <td>365.26</td>
+        <td>686.98</td>
       </tr>
     </table>
   </body>
