final html file
final file after changing css wrapper

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <img src="images/solar_system.jpg" class="wrapper" alt="solar system">
     <h2 class="header">Planet Profiles</h2>
 
-    <table class="table" class="wrapper">
+    <table class="table">
       <tr>
         <th class="th">Planet</th>
         <th class="th">Mercury</th>
@@ -70,4 +70,3 @@
     </table>
   </body>
 </html>
-
